--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "description": "Public pages monorepo",
   "author": "JR <javier.rey.eu@gmail.com> (https://javierrey.github.io)",
   "workspaces": ["packages/*", "apps/*"],
-  "main": "",
   "scripts": {
-    "git:init": "git init --initial-branch=main",
+    "git:init": "[ ! -d './.git' ] && git init --initial-branch=main",
     "status": "echo CLEAN: && git clean -nfdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/** && echo NEW: && git ls-files -o --exclude-standard",
     "clean": "git clean -fdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/**",
-    "build": "npm -w apps/view run build && echo 'build' # TODO",
-    "start": "echo 'start' # TODO",
-    "test": "echo 'test' # TODO"
+    "build": "echo '@todo build'",
+    "build:update-pages": "npm run build && node ./scripts/update-pages.js",
+    "start": "echo '@todo start'",
+    "test": "echo '@todo test'"
   },
   "dependencies": {},
-  "devDependencies": {
-    "eslint": "*",
-    "globals": "*",
-    "typescript-eslint": "*"
-  },
+  "devDependencies": {},
   "ignore": {
     "dependencies": {},
     "devDependencies": {}
