--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "git:init": "[ ! -d './.git' ] && git init --initial-branch=main",
     "status": "echo CLEAN: && git clean -nfdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/** && echo NEW: && git ls-files -o --exclude-standard",
     "clean": "git clean -fdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/**",
+    "install": "npm run clean && npm install",
     "build": "echo '@todo build'",
     "build:update-pages": "npm run build && node ./scripts/update-pages.js",
     "start": "echo '@todo start'",
