add or rename re-commands

--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "git:init": "[ ! -d './.git' ] && git init --initial-branch=main",
     "status": "echo CLEAN: && git clean -nfdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/** && echo NEW: && git ls-files -o --exclude-standard",
     "clean": "git clean -fdX -e !.* -e !**/_ignore/ -e !**/_ignore/** -e !*.ignore.* -e !local_modules/ -e !local_modules/**",
-    "clean:install": "npm run clean && npm install",
+    "reinstall": "npm run clean && npm install",
     "build": "echo '@todo build'",
     "build:update-pages": "npm run build && node ./scripts/update-pages.js",
+    "rebuild": "npm install && npm run build",
     "start": "echo '@todo start'",
-    "test": "echo '@todo test'"
+    "restart": "npm run build && npm run start",
+    "test": "echo '@todo test'",
+    "retest": "npm run build && npm run test"
   },
   "dependencies": {},
   "devDependencies": {},
